--- a/src/templates/layouts/instructor_base.html
+++ b/src/templates/layouts/instructor_base.html
@@ -3,16 +3,37 @@
 {% set show_sidenavbar = True %}
 
 {% block sidenavbar %}
+<script type="text/javascript">
+    function sidebarAction(path) {
+        var relPath = '/' + path;
+        
+        var selectedCourse = $('#courseSelector').val();
+        var selectedSection = $('#sectionSelector').val();
+
+        if (path !== 'home') {
+            relPath = relPath.concat('?');
+            var params = {};
+            if (selectedCourse) {
+                params.course = selectedCourse;
+            }
+            if (selectedSection) {
+                params.section = selectedSection;
+            }
+            relPath = relPath.concat($.param(params));
+        }
+        window.location.href = relPath;
+    }
+</script>
 <ul class="nav nav-sidebar">
-    <li class="sidebar-link"><a href="/home">COURSES</a></li>
-    <li class="sidebar-link"><a href="/students">STUDENTS</a></li>
+    <li class="sidebar-link"><a href="javascript:sidebarAction('home');">COURSES</a></li>
+    <li class="sidebar-link"><a href="javascript:sidebarAction('students');">STUDENTS</a></li>
     <li role="separator" class="divider"></li>
-    <li class="sidebar-link"><a href="/rounds">ROUNDS</a></li>
-    <li class="sidebar-link"><a href="/groups">GROUPS</a></li>
+    <li class="sidebar-link"><a href="javascript:sidebarAction('rounds');">ROUNDS</a></li>
+    <li class="sidebar-link"><a href="javascript:sidebarAction('groups');">GROUPS</a></li>
     <li role="separator" class="divider"></li>
 {#    <li class="sidebar-link"><a href="/responses">RESPONSES</a></li>#}
-    <li class="sidebar-link"><a href="/group_responses">GROUP RESPONSES</a></li>
-    <li class="sidebar-link"><a href="/show_responses">SHOW RESPONSES</a></li>
+    <li class="sidebar-link"><a href="javascript:sidebarAction('group_responses');">GROUP RESPONSES</a></li>
+    <li class="sidebar-link"><a href="javascript:sidebarAction('show_responses');">SHOW RESPONSES</a></li>
 </ul>
 {% endblock sidenavbar %}
 {#FIXME: Sidebar overlaps with content on small screens#}
