Add file input to add student modal

--- a/src/templates/instructor/list_students.html
+++ b/src/templates/instructor/list_students.html
@@ -156,6 +156,9 @@ understanding of the code for graders.
                             <input type="text" class="form-control" id="inputEmail" placeholder="Email(s)" name="email"
                                    required="true">
                         </div>
+                        <div class="col-sm-10">
+                            <input type="file" id="student-data" accept=".csv">
+                        </div>
                     </div>
                     <button type="submit" class="hide"></button>
                 </form>
