Add radio buttons for selecting export style

--- a/src/templates/instructor/show_responses.html
+++ b/src/templates/instructor/show_responses.html
@@ -47,6 +47,14 @@
 </div>
 <div class="card-body">
 <div class="table-responsive">
+    <div>
+        <form>
+            <input type="radio" name="rounds" value="single" checked> single column
+            <input type="radio" name="rounds" value="multi"> multi column <br>
+            <input type="radio" name="timing" value="round" checked> rounds
+            <input type="radio" name="timing" value="chrono"> chronological <br>
+        </form>
+    </div>
     <table class="table table-striped" id="group_table">
       <thead>
         <tr>
