Made names of inputs more descriptive

--- a/src/templates/instructor/show_responses.html
+++ b/src/templates/instructor/show_responses.html
@@ -49,10 +49,10 @@
 <div class="table-responsive">
     <div>
         <form>
-            <input type="radio" name="rounds" value="single" checked> single column
-            <input type="radio" name="rounds" value="multi"> multi column <br>
+            <input type="radio" name="columns" value="single" checked> single column
+            <input type="radio" name="columns" value="multi"> multi column <br>
             <input type="radio" name="timing" value="round" checked> rounds
-            <input type="radio" name="timing" value="chrono"> chronological <br>
+            <input type="radio" name="timing" value="forum"> forum <br>
         </form>
     </div>
     <table class="table table-striped" id="group_table">
