--- a/src/templates/instructor/list_students.html
+++ b/src/templates/instructor/list_students.html
@@ -153,11 +153,10 @@ understanding of the code for graders.
                         <label for="inputEmail" class="col-sm-2 control-label">Email(s)</label>
 
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputEmail" placeholder="Email(s)" name="email"
-                                   required="true">
+                            <input type="text" class="form-control" id="inputEmail" placeholder="Email(s)" name="email">
                         </div>
                         <div class="col-sm-10">
-                            <input type="file" id="student-data" accept=".csv">
+                            <textarea name="emails2" id="student-data"></textarea>
                         </div>
                     </div>
                     <button type="submit" class="hide"></button>
