--- a/src/templates/instructor/list_students.html
+++ b/src/templates/instructor/list_students.html
@@ -150,13 +150,8 @@ understanding of the code for graders.
                 <form class="form-horizontal" id="modalForm" method="post" style="margin-top: 20px;text-align: center;"
                       action="/students">
                     <div class="form-group">
-                        <label for="inputEmail" class="col-sm-2 control-label">Email(s)</label>
-
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputEmail" placeholder="Email(s)" name="email">
-                        </div>
-                        <div class="col-sm-10">
-                            <textarea name="emails2" id="student-data"></textarea>
+                            <textarea id="student-data"></textarea>
                         </div>
                     </div>
                     <button type="submit" class="hide"></button>
