--- a/src/templates/instructor/list_students.html
+++ b/src/templates/instructor/list_students.html
@@ -151,7 +151,7 @@ understanding of the code for graders.
                       action="/students">
                     <div class="form-group">
                         <div class="col-sm-10">
-                            <textarea id="student-data"></textarea>
+                            <textarea class="form-control" id="student-data"></textarea>
                         </div>
                     </div>
                     <button type="submit" class="hide"></button>
