--- a/src/templates/instructor/list_students.html
+++ b/src/templates/instructor/list_students.html
@@ -76,7 +76,8 @@ understanding of the code for graders.
         <thead>
         <tr>
             <th>#</th>
-            <th>Email</th>
+            <th>First Name</th>
+            <th>Last Name</th>
             <th>Delete</th>
         </tr>
         </thead>
@@ -84,7 +85,8 @@ understanding of the code for graders.
         {% for student in students %}
         <tr>
             <td>{{loop.index}}</td>
-            <td>{{student.email}}</td>
+            <td>{{student.first_name}}</td>
+            <td>{{student.last_name}}</td>
             <td>
                 <button class="btn btn-danger btn-sm" onclick="deleteStudent('{{student.email}}')">Delete</button>
             </td>
