Changed instructional information

--- a/src/templates/instructor/list_students.html
+++ b/src/templates/instructor/list_students.html
@@ -147,7 +147,7 @@ understanding of the code for graders.
                     {{selectedCourse}}</h4>
             </div>
             <div class="modal-body">
-                <h5>Add emails of students separated by commas, spaces, or newlines:</h5>
+                <h5>Please add a csv text of the form {First Name, Last Name, Gmail, Osu Email}:</h5>
 
                 <form class="form-horizontal" id="modalForm" method="post" style="margin-top: 20px;text-align: center;"
                       action="/students">
