Continued efforts to have both simple and csv input for students

--- a/src/templates/instructor/list_students.html
+++ b/src/templates/instructor/list_students.html
@@ -147,17 +147,32 @@ understanding of the code for graders.
                     {{selectedCourse}}</h4>
             </div>
             <div class="modal-body">
-                <h5>Please add text of the form: {First Name, Last Name, Gmail, OSU Email}:</h5>
-
                 <form class="form-horizontal" id="modalForm" method="post" style="margin-top: 20px;text-align: center;"
                       action="/students">
-                    <div class="form-group">
+                    <div class="form-group" id ="info">
+                        <label for="inputEmail" class="col-sm-2 control-label">Email(s)</label>
+
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="inputEmail" placeholder="Email(s)" name="email"
+                                   required="true">
+                        </div>
+                    </div>
+                    <div class="form-group" id="infoCSV">
+                        <h5>Please add text of the form: {First Name, Last Name, Gmail, OSU Email}:</h5>
                         <div class="col-sm-10">
                             <textarea class="form-control" id="student-data"></textarea>
                         </div>
                     </div>
                     <button type="submit" class="hide"></button>
                 </form>
+
+
+                <form  class="form-horizontal" id="modalForm" method="post" style="margin-top: 20px; text-align: center;"
+                      action="/students">
+
+                    <button type="submit" class="hide"></button>
+                </form>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
