--- a/src/templates/instructor/list_students.html
+++ b/src/templates/instructor/list_students.html
@@ -78,6 +78,7 @@ understanding of the code for graders.
             <th>#</th>
             <th>First Name</th>
             <th>Last Name</th>
+            <th>Gmail Address</th>
             <th>Delete</th>
         </tr>
         </thead>
@@ -87,6 +88,7 @@ understanding of the code for graders.
             <td>{{loop.index}}</td>
             <td>{{student.first_name}}</td>
             <td>{{student.last_name}}</td>
+            <td>{{student.email}}</td>
             <td>
                 <button class="btn btn-danger btn-sm" onclick="deleteStudent('{{student.email}}')">Delete</button>
             </td>
@@ -151,14 +153,13 @@ understanding of the code for graders.
                       action="/students">
                     <div class="form-group" id ="info">
                         <label for="inputEmail" class="col-sm-2 control-label">Email(s)</label>
-
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputEmail" placeholder="Email(s)" name="email"
-                                   required="true">
+                            <input type="text" class="form-control" id="inputEmail" name="email">
                         </div>
                     </div>
                     <div class="form-group" id="infoCSV">
                         <h5>Please add text of the form: {First Name, Last Name, Gmail, OSU Email}:</h5>
+                        <label for="student-data" class="col-sm-2 control-label">CSV String</label>
                         <div class="col-sm-10">
                             <textarea class="form-control" id="student-data"></textarea>
                         </div>
