Updated export pages to include student names

--- a/src/templates/instructor/show_html_responses.html
+++ b/src/templates/instructor/show_html_responses.html
@@ -13,7 +13,8 @@
         <div class="card">
             <div class="card-title">
                 <h2>({{ loop.index }}) &nbsp;
-                    Student: {{ student.email }} &nbsp;
+                    Name: {{ student.first_name }} {{ student.last_name }}
+                    Email: {{ student.email }} &nbsp;
                     Alias: {{ student.alias }} &nbsp;
                     Group: {{ student.group }} &nbsp;</h2>
             </div> <!-- ./card-title -->
