fixed export button sizing in custom css

--- a/src/templates/instructor/show_responses.html
+++ b/src/templates/instructor/show_responses.html
@@ -72,17 +72,17 @@
     </table>
     <div class="form-group" style="text-align:center;">
 
-        <button class="label label-success" style="margin-right:60px;width:100px;height:35px;font-size:15px"
+        <button class="label label-success" style="margin-right:60px;width:100px;height:35px;font-size:15px" id="singleHTML"
                 onclick="exportSingleColumnHtml('{{ selectedCourse }}','{{ selectedSection }}')">
             Single Column HTML
         </button>
 
-        <button class="label label-success" style="margin-right:60px;width:100px;height:35px;font-size:15px"
+        <button class="label label-success" style="margin-right:60px;width:100px;height:35px;font-size:15px" id="multiHTML"
                 onclick="exportMultiColumnHtml('{{ selectedCourse }}','{{ selectedSection }}')">
             Multi Column HTML
         </button>
 
-        <button class="label label-success" style="width:100px;height:35px;font-size:15px"
+        <button class="label label-success" style="width:100px;height:35px;font-size:15px" id="fileHTML"
                 onclick="exportData('{{ selectedCourse }}','{{ selectedSection }}')">
             FILE
         </button>
