--- a/src/static/css/custom-style.css
+++ b/src/static/css/custom-style.css
@@ -346,3 +346,16 @@ a:hover {
 select {
     padding: 2px !important;
 }
+
+/*Instructor Show Responses Export button sizing*/
+#singleHTML {
+    width: 200px !important;
+}
+
+#multiHTML {
+    width: 200px !important;
+}
+
+#fileHTML {
+    width:200px !important;
+}
